Move to integer primary keys
For simplicity. we can use a gem to hide the ids

--- a/test/fixtures/mentorships.yml
+++ b/test/fixtures/mentorships.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 active_no_emails_sent:
-  mentor: mentor_user
-  applicant: applicant_user
+  mentor: mentor
+  applicant: applicant
   standing: active
