--- a/test/fixtures/languages.yml
+++ b/test/fixtures/languages.yml
@@ -1,7 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-<%# one: %>
-<%#   name: MyString %>
+english:
+  iso639_alpha3: "eng"
+  iso639_alpha2: "en"
+  english_name: "English"
+  french_name: "anglais"
+  local_name: "English"
 
-<%# two: %>
-<%#   name: MyString %>
+spanish:
+  iso639_alpha3: "spa"  
+  iso639_alpha2: "es"
+  english_name: "Spanish"
+  french_name: "espagnol"
+  local_name: "Español"
